# f2py-cmake-bug

./: README.md
src/: CMakeLists.txt
src/subrepo/src/: CMakeLists.txt
